Additional adjustments: Fix play button arrow alignment Add check for global leftVideoUrl and rightVideoUrl variables Fix HLS variant selection immediately after load

--- a/src/components/Help/index.css
+++ b/src/components/Help/index.css
@@ -11,7 +11,6 @@
     left: 50%;
 
     margin: -300px 0 0 -300px;
-    opacity: 0.5;
 
     border-radius: 10px;
 }
